出力ファイルの削除対象を修正

--- a/.github/workflows/sync-and-publish-slide.yml
+++ b/.github/workflows/sync-and-publish-slide.yml
@@ -104,7 +104,7 @@ jobs:
           OUTPUT_DIR: "./public/slides"
         run: |
           mkdir -p $OUTPUT_DIR
-          rm -rf $OUTPUT_DIR/*
+          rm -f $OUTPUT_DIR/*.bin
           node ./scripts/combine-images.js
 
       - name: Upload processed content
