--- a/.github/workflows/sync-and-publish-slide.yml
+++ b/.github/workflows/sync-and-publish-slide.yml
@@ -83,6 +83,12 @@ jobs:
           -H "Content-Type: application/json" \
           -d "{\"step\": \"compress\"}"
 
+      - name: Install Wine
+        run: |
+          sudo dpkg --add-architecture i386
+          sudo apt-get update
+          sudo apt-get install -y wine32 wine64
+
       - name: Set execute permission for crunch.exe
         run: chmod +x ./bin/tools/crunch.exe
 
