--- a/.github/workflows/sync-and-publish-slide.yml
+++ b/.github/workflows/sync-and-publish-slide.yml
@@ -71,6 +71,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Install ImageMagick
+        run: sudo apt-get install -y imagemagick
+
       - name: Download raw images
         uses: actions/download-artifact@v4
         with:
