--- a/.github/workflows/sync-and-publish-slide.yml
+++ b/.github/workflows/sync-and-publish-slide.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           echo "$SERVICE_ACCOUNT_JSON" > service-account.json
           mkdir -p $TEMP_DIR
-          node ./scripts/download-slides.js
+          node .bin/scripts/download-slides.js
 
       - name: Upload raw images
         uses: actions/upload-artifact@v4
@@ -71,9 +71,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install ImageMagick
-        run: sudo apt-get install -y imagemagick
-
       - name: Download raw images
         uses: actions/download-artifact@v4
         with:
@@ -86,37 +83,11 @@ jobs:
           -H "Content-Type: application/json" \
           -d "{\"step\": \"compress\"}"
 
-      - name: Set execute permission
-        run: chmod +x ./bin/tools/crunch
-
       - name: Crunch images
-        run: |
-          # サブディレクトリごとに処理
-          mkdir -p ${{ env.TEMP_IMAGES_CRUNCHED }}
-          find ${{ env.TEMP_IMAGES }} -type f -name "*.png" | while read file; do
-            # 相対パスを取得
-            rel_path=${file#${{ env.TEMP_IMAGES }}/}
-            # 出力先のサブディレクトリパスを取得
-            output_subdir=$(dirname "$rel_path")
-            # 出力先のフルパスを作成
-            full_output_dir="${{ env.TEMP_IMAGES_CRUNCHED }}/$output_subdir"
-            # 出力先ディレクトリを作成
-            mkdir -p "$full_output_dir"
-            
-            # 画像サイズを取得
-            dimensions=$(identify -format "%wx%h" "$file")
-            
-            # ファイル名から拡張子を除いて.crnを付加
-            filename=$(basename "$file")
-            output_name="${filename%.*}_${dimensions}.crn"
-            
-            ./bin/tools/crunch \
-              -file "$file" \
-              -out "$full_output_dir/$output_name" \
-              -DXT1 \
-              -yflip \
-              -mipMode None
-          done
+        env:
+          TEMP_IMAGES: ${{ env.TEMP_IMAGES }}
+          TEMP_IMAGES_CRUNCHED: ${{ env.TEMP_IMAGES_CRUNCHED }}
+        run: node .bin/scripts/crunch-images.js
 
       - name: Notify combine start
         run: |
@@ -131,7 +102,7 @@ jobs:
           MIPMAP_ENABLED: ${{ env.MIPMAP_ENABLED }}
         run: |
           rm -f $OUTPUT_DIR/*.bin
-          node ./scripts/combine-images.js
+          node .bin/scripts/combine-images.js
 
       - name: Upload processed content
         uses: actions/upload-artifact@v4
