--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "dependencies": {
     "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
-    "sharp": "^0.34.2"
+    "image-size": "^2.0.2"
   }
 }
