--- a/.github/workflows/sync-and-publish-slide.yml
+++ b/.github/workflows/sync-and-publish-slide.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           echo "$SERVICE_ACCOUNT_JSON" > service-account.json
           mkdir -p $TEMP_DIR
-          node .bin/scripts/download-slides.js
+          node bin/scripts/download-slides.js
 
       - name: Upload raw images
         uses: actions/upload-artifact@v4
@@ -87,7 +87,7 @@ jobs:
         env:
           TEMP_IMAGES: ${{ env.TEMP_IMAGES }}
           TEMP_IMAGES_CRUNCHED: ${{ env.TEMP_IMAGES_CRUNCHED }}
-        run: node .bin/scripts/crunch-images.js
+        run: node bin/scripts/crunch-images.js
 
       - name: Notify combine start
         run: |
@@ -102,7 +102,7 @@ jobs:
           MIPMAP_ENABLED: ${{ env.MIPMAP_ENABLED }}
         run: |
           rm -f $OUTPUT_DIR/*.bin
-          node .bin/scripts/combine-images.js
+          node bin/scripts/combine-images.js
 
       - name: Upload processed content
         uses: actions/upload-artifact@v4
