QualityとMipModeの設定を追加

--- a/.github/workflows/sync-and-publish-slide.yml
+++ b/.github/workflows/sync-and-publish-slide.yml
@@ -14,6 +14,8 @@ env:
   TEMP_IMAGES_CRUNCHED: temp-images-crunched
   PUBLIC_DIR: ${{ vars.PUBLIC_DIR || 'public' }}
   OUTPUT_DIR: ${{ vars.PUBLIC_DIR || 'public' }}/slides
+  CRUNCH_QUALITY: ${{ vars.CRUNCH_QUALITY || '128' }}
+  CRUNCH_MIP_MODE: ${{ vars.CRUNCH_MIP_MODE || 'UseSourceOrGenerate' }}
   MIPMAP_ENABLED: false
 
 concurrency:
@@ -99,7 +101,8 @@ jobs:
         env:
           INPUT_DIR: ${{ env.TEMP_IMAGES_CRUNCHED }}
           OUTPUT_DIR: ${{ env.OUTPUT_DIR }}
-          MIPMAP_ENABLED: ${{ env.MIPMAP_ENABLED }}
+          CRUNCH_QUALITY: ${{ env.CRUNCH_QUALITY }}
+          CRUNCH_MIP_MODE: ${{ env.CRUNCH_MIP_MODE }}
         run: |
           rm -f $OUTPUT_DIR/*.bin
           node bin/scripts/combine-images.js
