--- a/.github/workflows/sync-and-publish-slide.yml
+++ b/.github/workflows/sync-and-publish-slide.yml
@@ -53,7 +53,7 @@ jobs:
           SLIDES_CONFIG: ${{ toJSON(github.event.client_payload.slides) }}
           TEMP_DIR: ${{ env.TEMP_IMAGES }}
         run: |
-          echo $GOOGLE_SERVICE_ACCOUNT | base64 -d | > service-account.json
+          echo "$GOOGLE_SERVICE_ACCOUNT" | base64 -d > service-account.json
           mkdir -p $TEMP_DIR
           node bin/scripts/download-slides.js
 
